# API_poduct_order

./: Item_views.py  crud.py  db.sqlite3  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 07eb0ba526c6_create_posts_table.py  35d3295b7425_add_count_colum_to_assosiate_table.py  3ab9408e0299_create_table.py  56b0646e3e86_add_unit_colum_to_assosiate_table.py  70472c6b8532_create_order_product__asossiation_table.py  7e268ba13bf5_create_users_table.py  be04540ff404_create_profile_table.py  f0a3ed0b1f61_create_orders_table.py  f604eaf180bb_create_product_table.py
api_v1/: __init__.py
api_v1/demo_auth/: crud.py  demo_jwt_auth.py  dependancy.py  helpers.py  views.py
api_v1/products/: crud.py  dependency.py  shemas.py  views.py
auth/: utils.py
certs/: jwt-private.pem  jwt-public.pem
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixin.py  order.py  order_products_asossiete.py  post.py  product.py  profile.py  user.py
users/: croud.py  shemas.py  views.py
